--- a/Indext.html
+++ b/Indext.html
@@ -19,7 +19,23 @@
     <title>Loan Calculator</title>
   </head>
   <body class="bg-dark">
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mx-auto">
+          <div class="card card-body text-center mt-5">
+            <h1 class="heading display-5 pb-3">Loan Calculator</h1>
+            <form id="loan-form">
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon" style="background: lightgrey; font-size: 1.5rem; padding: 0 0.5rem;">$</span>
+                  <input type="number" class="form-control" id="amount" placeholder="Loan Amount">
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
