--- a/Indext.html
+++ b/Indext.html
@@ -31,7 +31,21 @@
                   <input type="number" class="form-control" id="amount" placeholder="Loan Amount">
                 </div>
               </div>
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon" style="background: lightgrey; font-size: 1.5rem; padding: 0 0.5rem;">%</span>
+                  <input type="number" class="form-control" id="interest" placeholder="interest">
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="number" class="form-control" id="years" placeholder="Years To Repay">
+              </div>
+              <div class="form-group">
+                <input type="submit" value="Calculate" class="btn btn-dark btn-block">
+              </div>
             </form>
+            <!-- Loader Here -->
+            <!-- Results -->
           </div>
         </div>
       </div>
