loader gif added/on standby

--- a/Indext.html
+++ b/Indext.html
@@ -45,6 +45,10 @@
               </div>
             </form>
             <!-- Loader Here -->
+            <!-- <div id="loading">
+              <img src="img/loading.gif" alt="">
+            </div> -->
+
             <!-- Results -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
